--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "build": { "babel": { "include": [ "@ui-kitten/components" ] } }
     },
     "plugins": [
       "expo-router",
