feat: 添加时间线组件及数据库初始化功能
添加时间线组件以展示植物管理操作记录，并初始化WatermelonDB数据库以支持本地数据存储。包括植物和操作记录的增删改查功能，以及相关类型定义和工具函数。

--- a/app.json
+++ b/app.json
@@ -21,7 +21,13 @@
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png",
-      "build": { "babel": { "include": [ "@ui-kitten/components" ] } }
+      "build": {
+        "babel": {
+          "include": [
+            "@ui-kitten/components"
+          ]
+        }
+      }
     },
     "plugins": [
       "expo-router",
