--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@babel/runtime": "^7.27.0",
     "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^14.0.2",
+    "@nozbe/watermelondb": "^0.27.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "better-sqlite3": "8.1.0",
     "expo": "~52.0.41",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -35,6 +38,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
+    "react-content-loader": "^7.0.2",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
@@ -47,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
