feat: 更新依赖和优化时间线页面
- 在package.json中添加expo-file-system依赖以支持文件系统操作。
- 在时间线页面中引入Dimensions以动态计算图片高度，优化图片展示效果。
- 更新时间线页面的样式和结构添加

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo": "~52.0.41",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
