--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@react-navigation/native-stack": "^7.3.3",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
-    "better-sqlite3": "8.1.0",
+    "better-sqlite3": "^11.9.1",
     "expo": "~52.0.41",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -42,6 +42,7 @@
     "react-content-loader": "^7.0.2",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -58,6 +59,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
