--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "expo": "~52.0.41",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
+    "expo-crypto": "~14.0.2",
+    "expo-dev-client": "~5.0.19",
     "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
@@ -50,7 +52,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "9.13.6",
+    "react-native-svg": "15.11.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
