--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^14.0.2",
     "@nozbe/watermelondb": "^0.27.1",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-navigation/native": "^7.0.19",
-    "@react-navigation/native-stack": "^7.3.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "better-sqlite3": "^11.9.1",
-    "expo": "~52.0.41",
+    "expo": "~52.0.44",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-crypto": "~14.0.2",
@@ -36,23 +36,22 @@
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-modules-core": "^2.2.3",
-    "expo-router": "~4.0.19",
+    "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-content-loader": "^7.0.2",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
@@ -68,5 +67,15 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "@nozbe/watermelondb"
+        ],
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
