feat: 更新植物管理页面，添加图片选择和查看功能
- 在plantsPage.tsx中引入expo-image-picker以支持用户选择和拍摄植物图片。
- 添加全屏图片查看器功能，允许用户查看和旋转已选择的图片，提升用户体验。
- 更新植物添加和编辑逻辑，支持保存用户选择的图片。
- 优化页面布局和样式，增强整体可用性和视觉效果。

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,9 +86,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.anonymous.smallgarden'
+    namespace 'com.xiaodibao.smallgarden'
     defaultConfig {
-        applicationId 'com.anonymous.smallgarden'
+        applicationId 'com.xiaodibao.smallgarden'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
