--- a/eas.json
+++ b/eas.json
@@ -7,6 +7,7 @@
             "developmentClient": true,
             "distribution": "internal",
             "android": {
+                "buildType": "apk",
                 "gradleCommand": ":app:assembleDebug"
             }
         },
@@ -19,7 +20,7 @@
         },
         "production": {
             "android": {
-                "buildType": "app-bundle"
+                "buildType": "apk"
             }
         }
     },
