--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ui-kitten/eva-icons": "^5.3.1",
     "better-sqlite3": "^11.9.1",
     "expo": "~52.0.44",
+    "expo-asset": "~11.0.5",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-crypto": "~14.0.2",
@@ -77,5 +78,6 @@
         "listUnknownPackages": false
       }
     }
-  }
+  },
+  "expo-modules-autolinking": "*"
 }
