--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
     "esModuleInterop": true,
     "strict": true,
     "experimentalDecorators": true, // 必须为 true
-    "emitDecoratorMetadata": true,   // 可选，如需反射元数据
-    "strictPropertyInitialization" :false,
+    "emitDecoratorMetadata": true, // 可选，如需反射元数据
+    "strictPropertyInitialization": false,
+    "jsx": "react-native",
     "paths": {
       "@/*": [
         "./*"
