refactor: 更新应用配置和资源，优化启动画面
- 移除启动图标和背景图，更新应用配置以使用新的图标资源。
- 升级WatermelonDB依赖至0.28.0，确保兼容性和性能提升。
- 清理不再使用的图片资源，简化项目结构。
- 调整数据库初始化逻辑，增强对WatermelonDB原生模块的可用性检查。

--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": null,
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
