refactor: migrate from WatermelonDB to SQLite for data management
- Updated database imports and logic in ActionManager and PlantManager to utilize SQLite instead of WatermelonDB.
- Removed references to WatermelonDB and adjusted data handling methods for compatibility with SQLite.
- Cleaned up unused Android files and configurations to streamline the project structure.
- Ensured consistent data management practices across the application.

--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
       [
         "expo-splash-screen",
         {
-          "image": null,
+          "image": "./assets/images/favicon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
