--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@babel/runtime": "^7.27.0",
     "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^14.0.2",
-    "@nozbe/watermelondb": "^0.28.0",
+    "expo-sqlite": "~15.1.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -72,9 +72,7 @@
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
-        "exclude": [
-          "@nozbe/watermelondb"
-        ],
+        "exclude": [],
         "listUnknownPackages": false
       }
     }
