refactor: 更新应用名称和启动画面图标
- 将应用名称更改为“小花园”以反映品牌形象。
- 更新启动画面图标，使用新的透明图像资源以提升视觉效果。

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "small-garden",
+    "name": "小花园",
     "slug": "small-garden",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -25,7 +25,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/favicon.png",
+          "image": "./assets/images/touming.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
