--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/s3-request-presigner": "^3.787.0",
     "@babel/runtime": "^7.27.0",
     "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^14.0.2",
-    "expo-sqlite": "~15.1.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -39,6 +40,7 @@
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
