feat: 添加iOS配置和优化标签布局
- 在app.json中新增iOS相关配置，包括bundleIdentifier和infoPlist设置。
- 在package.json中添加打开Android模拟器的脚本命令。
- 优化_tab_layout.tsx文件，调整标签数据结构，新增添加行为标签，并改善标签样式以提升用户体验。

--- a/app.json
+++ b/app.json
@@ -46,6 +46,12 @@
     },
     "android": {
       "package": "com.xiaodibao.smallgarden"
+    },
+    "ios": {
+      "bundleIdentifier": "com.xiaodibao.smallgarden",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     }
   }
 }
