--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
+    "open-android": "emulator -avd Pixel_9",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
