--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -29,7 +29,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18.x
-          cache: 'npm'
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
       - name: Setup EAS
         uses: expo/expo-github-action@v8
@@ -38,7 +42,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Build Android Release
         run: eas build --platform android --profile production --non-interactive --no-wait
