--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "eas-cli": "^16.3.3",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-native-svg-transformer": "^1.5.0",
