--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -51,21 +51,32 @@ jobs:
 
       - name: Wait for build to complete
         run: |
+          start_time=$(date +%s)
+          max_wait_time=7200  # 2小时 = 7200秒
+          
           while true; do
-            echo "Checking build status..."
+            current_time=$(date +%s)
+            elapsed_time=$((current_time - start_time))
+            
+            if [ $elapsed_time -gt $max_wait_time ]; then
+              echo "Error: Build timeout after 2 hours of waiting"
+              exit 1
+            fi
+            
+            echo "Checking build status... (已等待 $((elapsed_time/60)) 分钟)"
             BUILD_LIST=$(eas build:list --platform android --status=finished --json --non-interactive || echo "[]")
             echo "Raw build list output: $BUILD_LIST"
             
             if [ "$BUILD_LIST" = "[]" ]; then
               echo "No finished builds found yet. Waiting..."
-              sleep 30
+              sleep 600
               continue
             fi
             
             if ! echo "$BUILD_LIST" | jq . >/dev/null 2>&1; then
               echo "Error: Invalid JSON received from eas build:list"
               echo "Raw output: $BUILD_LIST"
-              sleep 30
+              sleep 600
               continue
             fi
             
@@ -77,7 +88,7 @@ jobs:
             
             echo "Current build status: $BUILD_STATUS"
             echo "Waiting for build to complete..."
-            sleep 30
+            sleep 600
           done
 
       - name: Download build artifacts
