优化初始化逻辑，添加根状态管理的初始化；更新依赖项，新增日期处理库和MobX相关库；重构植物页面，集成区域管理功能，简化植物和待办事项的管理逻辑；更新设置页面，支持区域的添加、编辑和删除功能。

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^7.0.14",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.44",
     "expo-asset": "~11.0.5",
     "expo-blur": "~14.0.3",
@@ -44,6 +45,9 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
+    "mobx-state-tree": "^7.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
