--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "emitDecoratorMetadata": true, // 可选，如需反射元数据
     "strictPropertyInitialization": false,
     "jsx": "react-native",
+    "module": "esnext",
     "paths": {
       "@/*": [
         "./*"
