feat: 更新初始化逻辑，使用异步方式初始化根存储；添加新的轮子选择器组件以增强用户体验；重构页面头部组件，优化按钮交互逻辑；更新多个页面以支持新的右键点击事件处理；移除冗余的添加行为组件，提升代码整洁性。

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "react-native-wheel-picker-expo": "^0.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
