优化应用配置，禁用新架构；更新多个页面中的“备注”字段为“简介”，提升用户体验；重构行为管理页面，调整组件布局，增强交互性；移除冗余的日志输出，提升代码整洁性。

--- a/app.json
+++ b/app.json
@@ -7,7 +7,6 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
     "web": {
       "bundler": "metro",
       "output": "static",
@@ -52,6 +51,7 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
-    }
+    },
+    "newArchEnabled": false
   }
 }
