--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "~17.0.6",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
     "expo-sqlite": "~15.1.4",
